Kaggle Notebook | Python Learning | Version 2

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c4d527d0",
+   "id": "9f399670",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-18T14:17:32.608946Z",
-     "iopub.status.busy": "2025-10-18T14:17:32.608205Z",
-     "iopub.status.idle": "2025-10-18T14:17:34.718698Z",
-     "shell.execute_reply": "2025-10-18T14:17:34.717658Z"
+     "iopub.execute_input": "2025-10-19T10:34:24.646963Z",
+     "iopub.status.busy": "2025-10-19T10:34:24.646038Z",
+     "iopub.status.idle": "2025-10-19T10:34:26.583562Z",
+     "shell.execute_reply": "2025-10-19T10:34:26.582596Z"
     },
     "papermill": {
-     "duration": 2.116509,
-     "end_time": "2025-10-18T14:17:34.720769",
+     "duration": 1.942826,
+     "end_time": "2025-10-19T10:34:26.585340",
      "exception": false,
-     "start_time": "2025-10-18T14:17:32.604260",
+     "start_time": "2025-10-19T10:34:24.642514",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3108234c",
+   "id": "110d6aeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-18T14:17:34.726729Z",
-     "iopub.status.busy": "2025-10-18T14:17:34.725445Z",
-     "iopub.status.idle": "2025-10-18T14:17:34.734294Z",
-     "shell.execute_reply": "2025-10-18T14:17:34.733296Z"
+     "iopub.execute_input": "2025-10-19T10:34:26.590462Z",
+     "iopub.status.busy": "2025-10-19T10:34:26.589970Z",
+     "iopub.status.idle": "2025-10-19T10:34:26.597912Z",
+     "shell.execute_reply": "2025-10-19T10:34:26.597013Z"
     },
     "papermill": {
-     "duration": 0.01304,
-     "end_time": "2025-10-18T14:17:34.735980",
+     "duration": 0.012083,
+     "end_time": "2025-10-19T10:34:26.599638",
      "exception": false,
-     "start_time": "2025-10-18T14:17:34.722940",
+     "start_time": "2025-10-19T10:34:26.587555",
      "status": "completed"
     },
     "tags": []
@@ -75,6 +75,8 @@
    ],
    "source": [
     "def analyze_text(s:str) -> tuple :\n",
+    "    \n",
+    "    # -------------------- STRING OPERATIONS  --------------------\n",
     "    \"\"\"\n",
     "    Write a function named analyze_text(s: str) that accepts a string and returns a tuple:\n",
     "    (consonant_count: int, reversed_vowels: str, word_count: int)\n",
@@ -119,6 +121,107 @@
     "    print(analyze_text(\"hello world\")) # (7, \"hEllO wOrld\", 2))\n",
     "    print(analyze_text(\"Python Programming\")) # (13, 'PythOn PrOgrAmmIng', 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "64cc22a7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-19T10:34:26.604182Z",
+     "iopub.status.busy": "2025-10-19T10:34:26.603875Z",
+     "iopub.status.idle": "2025-10-19T10:34:26.611700Z",
+     "shell.execute_reply": "2025-10-19T10:34:26.610600Z"
+    },
+    "papermill": {
+     "duration": 0.011424,
+     "end_time": "2025-10-19T10:34:26.612987",
+     "exception": false,
+     "start_time": "2025-10-19T10:34:26.601563",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "55\n",
+      "8\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using recursion mechanism\n",
+    "def fibonacci_rec(n:int) ->int:\n",
+    "    # -------------------- FIBONACCI SEQUENCE --------------------\n",
+    "    \"\"\"\n",
+    "    Implement two functions: fibonacci_rec(n: int) -> int (recursive) and \n",
+    "    fibonacci_iter(n: int) -> int (iterative) that return the nth Fibonacci number.\n",
+    "    Note: fibonacci(0) = 0, fibonacci(1) = 1\n",
+    "    \n",
+    "    Input:\n",
+    "    is_equal(fibonacci_rec(6), 8) # count start from 1\n",
+    "    is_equal(fibonacci_iter(6), 8) # count start from 1\n",
+    "    is_equal(fibonacci_rec(10), fibonacci_iter(10))\n",
+    "    is_equal(fibonacci_rec(10), 55)\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    8\n",
+    "    8\n",
+    "    55\n",
+    "    55\n",
+    "    \"\"\"\n",
+    "    if (n==0):\n",
+    "        return 0\n",
+    "    elif (n==1):\n",
+    "        return 1\n",
+    "    else :\n",
+    "        return fibonacci_rec(n-1)+fibonacci_rec(n-2)\n",
+    "        \n",
+    "#using loop mechanism        \n",
+    "def fibonacci_iter(n:int)->int:\n",
+    "    fibonacci_list = []\n",
+    "    i=0\n",
+    "    while i<=n:\n",
+    "        if i == 0:\n",
+    "            fibonacci_list.append(i)\n",
+    "        elif i == 1:\n",
+    "            fibonacci_list.append(i)\n",
+    "        else :\n",
+    "            val = fibonacci_list[i-1] +fibonacci_list[i-2]\n",
+    "            fibonacci_list.append(val)\n",
+    "        i = i+1\n",
+    "    return fibonacci_list[i-1]\n",
+    "    #return fibonacci_list\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    print(fibonacci_rec(6)) #8\n",
+    "    #print([fibonacci_rec(i) for i in range(7)])\n",
+    "    print(fibonacci_rec(10)) #55\n",
+    "    print(fibonacci_iter(6)) #8\n",
+    "    print(fibonacci_iter(10)) #55"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6cac5ed",
+   "metadata": {
+    "papermill": {
+     "duration": 0.001512,
+     "end_time": "2025-10-19T10:34:26.616370",
+     "exception": false,
+     "start_time": "2025-10-19T10:34:26.614858",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -150,14 +253,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.365545,
-   "end_time": "2025-10-18T14:17:35.259109",
+   "duration": 7.40069,
+   "end_time": "2025-10-19T10:34:27.136776",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-18T14:17:26.893564",
+   "start_time": "2025-10-19T10:34:19.736086",
    "version": "2.6.0"
   }
  },
