Kaggle Notebook | Python Learning | Version 3

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9f399670",
+   "id": "6846dc61",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-19T10:34:24.646963Z",
-     "iopub.status.busy": "2025-10-19T10:34:24.646038Z",
-     "iopub.status.idle": "2025-10-19T10:34:26.583562Z",
-     "shell.execute_reply": "2025-10-19T10:34:26.582596Z"
+     "iopub.execute_input": "2025-10-20T16:11:37.873370Z",
+     "iopub.status.busy": "2025-10-20T16:11:37.872484Z",
+     "iopub.status.idle": "2025-10-20T16:11:39.938340Z",
+     "shell.execute_reply": "2025-10-20T16:11:39.937276Z"
     },
     "papermill": {
-     "duration": 1.942826,
-     "end_time": "2025-10-19T10:34:26.585340",
+     "duration": 2.072461,
+     "end_time": "2025-10-20T16:11:39.940451",
      "exception": false,
-     "start_time": "2025-10-19T10:34:24.642514",
+     "start_time": "2025-10-20T16:11:37.867990",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "110d6aeb",
+   "id": "12f294e5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-19T10:34:26.590462Z",
-     "iopub.status.busy": "2025-10-19T10:34:26.589970Z",
-     "iopub.status.idle": "2025-10-19T10:34:26.597912Z",
-     "shell.execute_reply": "2025-10-19T10:34:26.597013Z"
+     "iopub.execute_input": "2025-10-20T16:11:39.947069Z",
+     "iopub.status.busy": "2025-10-20T16:11:39.946571Z",
+     "iopub.status.idle": "2025-10-20T16:11:39.955580Z",
+     "shell.execute_reply": "2025-10-20T16:11:39.954424Z"
     },
     "papermill": {
-     "duration": 0.012083,
-     "end_time": "2025-10-19T10:34:26.599638",
+     "duration": 0.0141,
+     "end_time": "2025-10-20T16:11:39.957262",
      "exception": false,
-     "start_time": "2025-10-19T10:34:26.587555",
+     "start_time": "2025-10-20T16:11:39.943162",
      "status": "completed"
     },
     "tags": []
@@ -125,19 +125,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "64cc22a7",
+   "id": "1014ae58",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-19T10:34:26.604182Z",
-     "iopub.status.busy": "2025-10-19T10:34:26.603875Z",
-     "iopub.status.idle": "2025-10-19T10:34:26.611700Z",
-     "shell.execute_reply": "2025-10-19T10:34:26.610600Z"
+     "iopub.execute_input": "2025-10-20T16:11:39.963203Z",
+     "iopub.status.busy": "2025-10-20T16:11:39.962869Z",
+     "iopub.status.idle": "2025-10-20T16:11:39.971577Z",
+     "shell.execute_reply": "2025-10-20T16:11:39.970567Z"
     },
     "papermill": {
-     "duration": 0.011424,
-     "end_time": "2025-10-19T10:34:26.612987",
+     "duration": 0.013766,
+     "end_time": "2025-10-20T16:11:39.973444",
      "exception": false,
-     "start_time": "2025-10-19T10:34:26.601563",
+     "start_time": "2025-10-20T16:11:39.959678",
      "status": "completed"
     },
     "tags": []
@@ -208,14 +208,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "0e37e2fd",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-20T16:11:39.979925Z",
+     "iopub.status.busy": "2025-10-20T16:11:39.979561Z",
+     "iopub.status.idle": "2025-10-20T16:11:39.989429Z",
+     "shell.execute_reply": "2025-10-20T16:11:39.988163Z"
+    },
+    "papermill": {
+     "duration": 0.015333,
+     "end_time": "2025-10-20T16:11:39.990982",
+     "exception": false,
+     "start_time": "2025-10-20T16:11:39.975649",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "['Mouse', 'Keyboard']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def problem_statement():\n",
+    "    # -------------------- INVENTORY MANAGEMENT --------------------\n",
+    "   \n",
+    "    \"\"\"\n",
+    "    Implement the following functions for a product inventory dictionary:\n",
+    "    \n",
+    "    create_inventory(initial: dict = None) -> dict - returns a dictionary mapping \n",
+    "    product name to quantity. If initial is provided, use it; otherwise return an empty dict.\n",
+    "    \n",
+    "    add_product(inventory: dict, name: str, quantity: int) -> None - adds quantity to \n",
+    "    existing product or creates new entry.\n",
+    "    \n",
+    "    remove_product(inventory: dict, name: str, quantity: int) -> bool - removes quantity \n",
+    "    from product. Returns True if successful, False if insufficient stock.\n",
+    "    \n",
+    "    low_stock_items(inventory: dict, threshold: int) -> list - returns list of product \n",
+    "    names with quantity less than threshold.\n",
+    "    \n",
+    "    Input:\n",
+    "    inventory = create_inventory()\n",
+    "    add_product(inventory, \"Laptop\", 10)\n",
+    "    add_product(inventory, \"Mouse\", 5)\n",
+    "    add_product(inventory, \"Keyboard\", 3)\n",
+    "    is_equal(remove_product(inventory, \"Laptop\", 2), True)\n",
+    "    is_equal(low_stock_items(inventory, 5), [\"Mouse\", \"Keyboard\"])\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    True\n",
+    "    ['Mouse', 'Keyboard']\n",
+    "    \"\"\"\n",
+    "    return None\n",
+    "\n",
+    "def create_inventory(initial: dict = None) -> dict:\n",
+    "    '''\n",
+    "    Returns a dictionary mapping product name to quantity. If initial is provided, use it; otherwise return an empty dict.\n",
+    "    '''\n",
+    "    if initial :\n",
+    "        return initial \n",
+    "    else:\n",
+    "        return {}\n",
+    "    \n",
+    "def add_product(inventory: dict, name: str, quantity: int) -> None:\n",
+    "    '''\n",
+    "    Adds quantity to  existing product or creates new entry.\n",
+    "    '''\n",
+    "    if name in inventory.keys():\n",
+    "        inventory[name] = inventory[name] + quantity\n",
+    "    else :\n",
+    "        inventory[name] = quantity\n",
+    "    return None\n",
+    "    \n",
+    "def remove_product(inventory: dict, name: str, quantity: int) -> bool:\n",
+    "    '''\n",
+    "    Removes quantity from product. Returns True if successful, False if insufficient stock.\n",
+    "    '''\n",
+    "    if inventory[name]>=quantity:\n",
+    "        inventory[name] = inventory[name]- quantity\n",
+    "        # print(\"Operation Successful !!.\")\n",
+    "        return True\n",
+    "    else :\n",
+    "        # Print(\"Insufficient Stock !!.\")\n",
+    "        return False\n",
+    "\n",
+    "def low_stock_items(inventory: dict, threshold: int) -> list:\n",
+    "    '''\n",
+    "    Returns list of product names with quantity less than threshold.\n",
+    "    '''\n",
+    "    return([k for k,v in inventory.items() if inventory[k] <= threshold])\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    inventory = create_inventory()\n",
+    "    add_product(inventory, \"Laptop\", 10)\n",
+    "    add_product(inventory, \"Mouse\", 5)\n",
+    "    add_product(inventory, \"Keyboard\", 3)\n",
+    "    print(remove_product(inventory, \"Laptop\", 2))\n",
+    "    print(low_stock_items(inventory, 5))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c6cac5ed",
+   "id": "7056e8d3",
    "metadata": {
     "papermill": {
-     "duration": 0.001512,
-     "end_time": "2025-10-19T10:34:26.616370",
+     "duration": 0.001855,
+     "end_time": "2025-10-20T16:11:39.995195",
      "exception": false,
-     "start_time": "2025-10-19T10:34:26.614858",
+     "start_time": "2025-10-20T16:11:39.993340",
      "status": "completed"
     },
     "tags": []
@@ -253,14 +363,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.40069,
-   "end_time": "2025-10-19T10:34:27.136776",
+   "duration": 7.90095,
+   "end_time": "2025-10-20T16:11:40.518049",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-19T10:34:19.736086",
+   "start_time": "2025-10-20T16:11:32.617099",
    "version": "2.6.0"
   }
  },
