Kaggle Notebook | Python Learning | Version 4

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6846dc61",
+   "id": "976e36d9",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-20T16:11:37.873370Z",
-     "iopub.status.busy": "2025-10-20T16:11:37.872484Z",
-     "iopub.status.idle": "2025-10-20T16:11:39.938340Z",
-     "shell.execute_reply": "2025-10-20T16:11:39.937276Z"
+     "iopub.execute_input": "2025-10-21T18:10:09.283757Z",
+     "iopub.status.busy": "2025-10-21T18:10:09.283429Z",
+     "iopub.status.idle": "2025-10-21T18:10:11.586108Z",
+     "shell.execute_reply": "2025-10-21T18:10:11.584729Z"
     },
     "papermill": {
-     "duration": 2.072461,
-     "end_time": "2025-10-20T16:11:39.940451",
+     "duration": 2.308437,
+     "end_time": "2025-10-21T18:10:11.587899",
      "exception": false,
-     "start_time": "2025-10-20T16:11:37.867990",
+     "start_time": "2025-10-21T18:10:09.279462",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12f294e5",
+   "id": "6ed108ba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-20T16:11:39.947069Z",
-     "iopub.status.busy": "2025-10-20T16:11:39.946571Z",
-     "iopub.status.idle": "2025-10-20T16:11:39.955580Z",
-     "shell.execute_reply": "2025-10-20T16:11:39.954424Z"
+     "iopub.execute_input": "2025-10-21T18:10:11.594209Z",
+     "iopub.status.busy": "2025-10-21T18:10:11.593759Z",
+     "iopub.status.idle": "2025-10-21T18:10:11.603204Z",
+     "shell.execute_reply": "2025-10-21T18:10:11.602033Z"
     },
     "papermill": {
-     "duration": 0.0141,
-     "end_time": "2025-10-20T16:11:39.957262",
+     "duration": 0.015335,
+     "end_time": "2025-10-21T18:10:11.606006",
      "exception": false,
-     "start_time": "2025-10-20T16:11:39.943162",
+     "start_time": "2025-10-21T18:10:11.590671",
      "status": "completed"
     },
     "tags": []
@@ -100,9 +100,17 @@
     "    #char_count = [{i:s.count(i)} for i in reduced_string]\n",
     "\n",
     "    # 1. Count the number of consonants (excluding spaces and special chars)\n",
-    "    cons = 'bcdfghjklmnpqrstvwxyz'\n",
-    "    cons_filter = list(filter(lambda x :x.lower() in cons,s))\n",
-    "    cons_count = len(cons_filter)\n",
+    "    \n",
+    "    #Approach 1\n",
+    "    # cons = 'bcdfghjklmnpqrstvwxyz'\n",
+    "    # cons_filter = list(filter(lambda x :x.lower() in cons,s))\n",
+    "    # cons_count = len(cons_filter)\n",
+    "    \n",
+    "    #Approach 2\n",
+    "    vowel ='aeiou'\n",
+    "    char_list = list(s)\n",
+    "    char_list_filter = [ch for ch in char_list if ch.isalpha()]\n",
+    "    cons_count= sum([char_list_filter.count(ch) for ch in set(char_list_filter) if ch.lower() not in vowel])\n",
     "\n",
     "    #2. Replace all vowels with their uppercase versions and return the modified string\n",
     "    vowel ='aeiou'\n",
@@ -125,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1014ae58",
+   "id": "eb20b8c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-20T16:11:39.963203Z",
-     "iopub.status.busy": "2025-10-20T16:11:39.962869Z",
-     "iopub.status.idle": "2025-10-20T16:11:39.971577Z",
-     "shell.execute_reply": "2025-10-20T16:11:39.970567Z"
+     "iopub.execute_input": "2025-10-21T18:10:11.612530Z",
+     "iopub.status.busy": "2025-10-21T18:10:11.612197Z",
+     "iopub.status.idle": "2025-10-21T18:10:11.620909Z",
+     "shell.execute_reply": "2025-10-21T18:10:11.619875Z"
     },
     "papermill": {
-     "duration": 0.013766,
-     "end_time": "2025-10-20T16:11:39.973444",
+     "duration": 0.013739,
+     "end_time": "2025-10-21T18:10:11.622476",
      "exception": false,
-     "start_time": "2025-10-20T16:11:39.959678",
+     "start_time": "2025-10-21T18:10:11.608737",
      "status": "completed"
     },
     "tags": []
@@ -209,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0e37e2fd",
+   "id": "408144c9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-20T16:11:39.979925Z",
-     "iopub.status.busy": "2025-10-20T16:11:39.979561Z",
-     "iopub.status.idle": "2025-10-20T16:11:39.989429Z",
-     "shell.execute_reply": "2025-10-20T16:11:39.988163Z"
+     "iopub.execute_input": "2025-10-21T18:10:11.629172Z",
+     "iopub.status.busy": "2025-10-21T18:10:11.628704Z",
+     "iopub.status.idle": "2025-10-21T18:10:11.639872Z",
+     "shell.execute_reply": "2025-10-21T18:10:11.638429Z"
     },
     "papermill": {
-     "duration": 0.015333,
-     "end_time": "2025-10-20T16:11:39.990982",
+     "duration": 0.01658,
+     "end_time": "2025-10-21T18:10:11.641543",
      "exception": false,
-     "start_time": "2025-10-20T16:11:39.975649",
+     "start_time": "2025-10-21T18:10:11.624963",
      "status": "completed"
     },
     "tags": []
@@ -318,20 +326,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7056e8d3",
+   "execution_count": 5,
+   "id": "2ff93efa",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-21T18:10:11.648117Z",
+     "iopub.status.busy": "2025-10-21T18:10:11.647744Z",
+     "iopub.status.idle": "2025-10-21T18:10:11.655261Z",
+     "shell.execute_reply": "2025-10-21T18:10:11.654246Z"
+    },
     "papermill": {
-     "duration": 0.001855,
-     "end_time": "2025-10-20T16:11:39.995195",
+     "duration": 0.012885,
+     "end_time": "2025-10-21T18:10:11.656934",
      "exception": false,
-     "start_time": "2025-10-20T16:11:39.993340",
+     "start_time": "2025-10-21T18:10:11.644049",
      "status": "completed"
     },
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([1, 2, 3, 4, 3, 4, 5, 6], [1, 2, 3, 4, 5, 6], [3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge_unique(l1: list, l2: list) -> tuple:\n",
+    "    # -------------------- LIST OPERATIONS - MERGE & UNIQUE --------------------\n",
+    "    \"\"\"\n",
+    "    Implement a function merge_unique(l1: list, l2: list) -> tuple that:\n",
+    "    1. Creates l3 by merging l1 and l2 (concatenation)\n",
+    "    2. Creates l4 with only unique elements from l3 (preserve order of first occurrence)\n",
+    "    3. Creates l5 with common elements between l1 and l2\n",
+    "    4. Returns (l3, l4, l5)\n",
+    "    \n",
+    "    Input:\n",
+    "    l1 = [1, 2, 3, 4]\n",
+    "    l2 = [3, 4, 5, 6]\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    ([1, 2, 3, 4, 3, 4, 5, 6], [1, 2, 3, 4, 5, 6], [3, 4])\n",
+    "    \"\"\"\n",
+    "    l3 = l1 + l2\n",
+    "    l4 = list(set(l3))\n",
+    "    l5 = {i: l3.count(i) for i in l3}\n",
+    "    l5 = [k for k,v in l5.items() if v == 2]\n",
+    "    return (l3,l4,l5)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    l1 = [1, 2, 3, 4]\n",
+    "    l2 = [3, 4, 5, 6]\n",
+    "    print(merge_unique(l1, l2))"
+   ]
   }
  ],
  "metadata": {
@@ -363,14 +412,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 7.90095,
-   "end_time": "2025-10-20T16:11:40.518049",
+   "duration": 8.705316,
+   "end_time": "2025-10-21T18:10:12.179602",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-20T16:11:32.617099",
+   "start_time": "2025-10-21T18:10:03.474286",
    "version": "2.6.0"
   }
  },
