--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "976e36d9",
+   "id": "3dacb174",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-21T18:10:09.283757Z",
-     "iopub.status.busy": "2025-10-21T18:10:09.283429Z",
-     "iopub.status.idle": "2025-10-21T18:10:11.586108Z",
-     "shell.execute_reply": "2025-10-21T18:10:11.584729Z"
+     "iopub.execute_input": "2025-10-22T17:47:58.245568Z",
+     "iopub.status.busy": "2025-10-22T17:47:58.245185Z",
+     "iopub.status.idle": "2025-10-22T17:47:59.995757Z",
+     "shell.execute_reply": "2025-10-22T17:47:59.994931Z"
     },
     "papermill": {
-     "duration": 2.308437,
-     "end_time": "2025-10-21T18:10:11.587899",
+     "duration": 1.757602,
+     "end_time": "2025-10-22T17:47:59.997637",
      "exception": false,
-     "start_time": "2025-10-21T18:10:09.279462",
+     "start_time": "2025-10-22T17:47:58.240035",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6ed108ba",
+   "id": "60d285ee",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-21T18:10:11.594209Z",
-     "iopub.status.busy": "2025-10-21T18:10:11.593759Z",
-     "iopub.status.idle": "2025-10-21T18:10:11.603204Z",
-     "shell.execute_reply": "2025-10-21T18:10:11.602033Z"
+     "iopub.execute_input": "2025-10-22T17:48:00.004754Z",
+     "iopub.status.busy": "2025-10-22T17:48:00.004323Z",
+     "iopub.status.idle": "2025-10-22T17:48:00.013048Z",
+     "shell.execute_reply": "2025-10-22T17:48:00.012100Z"
     },
     "papermill": {
-     "duration": 0.015335,
-     "end_time": "2025-10-21T18:10:11.606006",
+     "duration": 0.01382,
+     "end_time": "2025-10-22T17:48:00.014517",
      "exception": false,
-     "start_time": "2025-10-21T18:10:11.590671",
+     "start_time": "2025-10-22T17:48:00.000697",
      "status": "completed"
     },
     "tags": []
@@ -133,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb20b8c3",
+   "id": "c002c409",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-21T18:10:11.612530Z",
-     "iopub.status.busy": "2025-10-21T18:10:11.612197Z",
-     "iopub.status.idle": "2025-10-21T18:10:11.620909Z",
-     "shell.execute_reply": "2025-10-21T18:10:11.619875Z"
+     "iopub.execute_input": "2025-10-22T17:48:00.021293Z",
+     "iopub.status.busy": "2025-10-22T17:48:00.020335Z",
+     "iopub.status.idle": "2025-10-22T17:48:00.028439Z",
+     "shell.execute_reply": "2025-10-22T17:48:00.027361Z"
     },
     "papermill": {
-     "duration": 0.013739,
-     "end_time": "2025-10-21T18:10:11.622476",
+     "duration": 0.012846,
+     "end_time": "2025-10-22T17:48:00.029950",
      "exception": false,
-     "start_time": "2025-10-21T18:10:11.608737",
+     "start_time": "2025-10-22T17:48:00.017104",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "408144c9",
+   "id": "354c20e1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-21T18:10:11.629172Z",
-     "iopub.status.busy": "2025-10-21T18:10:11.628704Z",
-     "iopub.status.idle": "2025-10-21T18:10:11.639872Z",
-     "shell.execute_reply": "2025-10-21T18:10:11.638429Z"
+     "iopub.execute_input": "2025-10-22T17:48:00.036421Z",
+     "iopub.status.busy": "2025-10-22T17:48:00.036114Z",
+     "iopub.status.idle": "2025-10-22T17:48:00.046324Z",
+     "shell.execute_reply": "2025-10-22T17:48:00.045222Z"
     },
     "papermill": {
-     "duration": 0.01658,
-     "end_time": "2025-10-21T18:10:11.641543",
+     "duration": 0.015431,
+     "end_time": "2025-10-22T17:48:00.047899",
      "exception": false,
-     "start_time": "2025-10-21T18:10:11.624963",
+     "start_time": "2025-10-22T17:48:00.032468",
      "status": "completed"
     },
     "tags": []
@@ -327,19 +327,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ff93efa",
+   "id": "4db9910e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-21T18:10:11.648117Z",
-     "iopub.status.busy": "2025-10-21T18:10:11.647744Z",
-     "iopub.status.idle": "2025-10-21T18:10:11.655261Z",
-     "shell.execute_reply": "2025-10-21T18:10:11.654246Z"
+     "iopub.execute_input": "2025-10-22T17:48:00.054572Z",
+     "iopub.status.busy": "2025-10-22T17:48:00.053724Z",
+     "iopub.status.idle": "2025-10-22T17:48:00.060694Z",
+     "shell.execute_reply": "2025-10-22T17:48:00.059659Z"
     },
     "papermill": {
-     "duration": 0.012885,
-     "end_time": "2025-10-21T18:10:11.656934",
+     "duration": 0.0118,
+     "end_time": "2025-10-22T17:48:00.062248",
      "exception": false,
-     "start_time": "2025-10-21T18:10:11.644049",
+     "start_time": "2025-10-22T17:48:00.050448",
      "status": "completed"
     },
     "tags": []
@@ -381,6 +381,92 @@
     "    l2 = [3, 4, 5, 6]\n",
     "    print(merge_unique(l1, l2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6f291222",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-22T17:48:00.068951Z",
+     "iopub.status.busy": "2025-10-22T17:48:00.068150Z",
+     "iopub.status.idle": "2025-10-22T17:48:00.075643Z",
+     "shell.execute_reply": "2025-10-22T17:48:00.074579Z"
+    },
+    "papermill": {
+     "duration": 0.012426,
+     "end_time": "2025-10-22T17:48:00.077188",
+     "exception": false,
+     "start_time": "2025-10-22T17:48:00.064762",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_max_in_nested(nested_list: list) -> int:\n",
+    "    # -------------------- MAXIMUM VALUE IN NESTED STRUCTURE --------------------\n",
+    "    \"\"\"\n",
+    "    Write a function find_max_in_nested(nested_list: list) -> int that accepts a list \n",
+    "    which may contain integers or other nested lists. It should return the maximum \n",
+    "    integer found at any nesting level. If no integers are found, return None.\n",
+    "    \n",
+    "    Example Input:\n",
+    "    nested = [\n",
+    "        [2, [37, [100]]], \n",
+    "        4, \n",
+    "        [10, [50, [1, 2, [3, 150]]]],\n",
+    "    ]\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    150\n",
+    "    \"\"\"\n",
+    "    max_elem = None\n",
+    "    def travesing(lst):\n",
+    "        nonlocal max_elem\n",
+    "        for i, item in enumerate(lst):\n",
+    "            #print(i,item)\n",
+    "            if isinstance(item,list):\n",
+    "                travesing(item)\n",
+    "            elif isinstance(item,int):\n",
+    "                if max_elem is None or item > max_elem:\n",
+    "                    max_elem = item \n",
+    "    travesing(nested_list)\n",
+    "    return max_elem\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    nested_list = [\n",
+    "        [2, [37, [100]]], \n",
+    "        4, \n",
+    "        [10, [50, [1, 2, [3, 150]]]],\n",
+    "    ]\n",
+    "    print(find_max_in_nested(nested_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e6cdafe",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002196,
+     "end_time": "2025-10-22T17:48:00.082030",
+     "exception": false,
+     "start_time": "2025-10-22T17:48:00.079834",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -412,14 +498,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.705316,
-   "end_time": "2025-10-21T18:10:12.179602",
+   "duration": 6.926213,
+   "end_time": "2025-10-22T17:48:00.604391",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-21T18:10:03.474286",
+   "start_time": "2025-10-22T17:47:53.678178",
    "version": "2.6.0"
   }
  },
