Kaggle Notebook | Python Learning | Version 6

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3dacb174",
+   "id": "d914bdb0",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-22T17:47:58.245568Z",
-     "iopub.status.busy": "2025-10-22T17:47:58.245185Z",
-     "iopub.status.idle": "2025-10-22T17:47:59.995757Z",
-     "shell.execute_reply": "2025-10-22T17:47:59.994931Z"
+     "iopub.execute_input": "2025-10-24T02:30:28.196069Z",
+     "iopub.status.busy": "2025-10-24T02:30:28.195665Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.337182Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.336196Z"
     },
     "papermill": {
-     "duration": 1.757602,
-     "end_time": "2025-10-22T17:47:59.997637",
+     "duration": 2.147754,
+     "end_time": "2025-10-24T02:30:30.338885",
      "exception": false,
-     "start_time": "2025-10-22T17:47:58.240035",
+     "start_time": "2025-10-24T02:30:28.191131",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60d285ee",
+   "id": "f008cfba",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-22T17:48:00.004754Z",
-     "iopub.status.busy": "2025-10-22T17:48:00.004323Z",
-     "iopub.status.idle": "2025-10-22T17:48:00.013048Z",
-     "shell.execute_reply": "2025-10-22T17:48:00.012100Z"
+     "iopub.execute_input": "2025-10-24T02:30:30.346524Z",
+     "iopub.status.busy": "2025-10-24T02:30:30.346040Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.355055Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.354052Z"
     },
     "papermill": {
-     "duration": 0.01382,
-     "end_time": "2025-10-22T17:48:00.014517",
+     "duration": 0.014645,
+     "end_time": "2025-10-24T02:30:30.356673",
      "exception": false,
-     "start_time": "2025-10-22T17:48:00.000697",
+     "start_time": "2025-10-24T02:30:30.342028",
      "status": "completed"
     },
     "tags": []
@@ -133,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c002c409",
+   "id": "a5e3088e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-22T17:48:00.021293Z",
-     "iopub.status.busy": "2025-10-22T17:48:00.020335Z",
-     "iopub.status.idle": "2025-10-22T17:48:00.028439Z",
-     "shell.execute_reply": "2025-10-22T17:48:00.027361Z"
+     "iopub.execute_input": "2025-10-24T02:30:30.363826Z",
+     "iopub.status.busy": "2025-10-24T02:30:30.363500Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.372723Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.371417Z"
     },
     "papermill": {
-     "duration": 0.012846,
-     "end_time": "2025-10-22T17:48:00.029950",
+     "duration": 0.01522,
+     "end_time": "2025-10-24T02:30:30.374960",
      "exception": false,
-     "start_time": "2025-10-22T17:48:00.017104",
+     "start_time": "2025-10-24T02:30:30.359740",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "354c20e1",
+   "id": "42f41543",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-22T17:48:00.036421Z",
-     "iopub.status.busy": "2025-10-22T17:48:00.036114Z",
-     "iopub.status.idle": "2025-10-22T17:48:00.046324Z",
-     "shell.execute_reply": "2025-10-22T17:48:00.045222Z"
+     "iopub.execute_input": "2025-10-24T02:30:30.382714Z",
+     "iopub.status.busy": "2025-10-24T02:30:30.382155Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.393579Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.391703Z"
     },
     "papermill": {
-     "duration": 0.015431,
-     "end_time": "2025-10-22T17:48:00.047899",
+     "duration": 0.017633,
+     "end_time": "2025-10-24T02:30:30.395548",
      "exception": false,
-     "start_time": "2025-10-22T17:48:00.032468",
+     "start_time": "2025-10-24T02:30:30.377915",
      "status": "completed"
     },
     "tags": []
@@ -327,19 +327,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4db9910e",
+   "id": "0f43fbb3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-22T17:48:00.054572Z",
-     "iopub.status.busy": "2025-10-22T17:48:00.053724Z",
-     "iopub.status.idle": "2025-10-22T17:48:00.060694Z",
-     "shell.execute_reply": "2025-10-22T17:48:00.059659Z"
+     "iopub.execute_input": "2025-10-24T02:30:30.403622Z",
+     "iopub.status.busy": "2025-10-24T02:30:30.403300Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.410198Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.409156Z"
     },
     "papermill": {
-     "duration": 0.0118,
-     "end_time": "2025-10-22T17:48:00.062248",
+     "duration": 0.012943,
+     "end_time": "2025-10-24T02:30:30.411810",
      "exception": false,
-     "start_time": "2025-10-22T17:48:00.050448",
+     "start_time": "2025-10-24T02:30:30.398867",
      "status": "completed"
     },
     "tags": []
@@ -385,19 +385,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6f291222",
+   "id": "548fb583",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-22T17:48:00.068951Z",
-     "iopub.status.busy": "2025-10-22T17:48:00.068150Z",
-     "iopub.status.idle": "2025-10-22T17:48:00.075643Z",
-     "shell.execute_reply": "2025-10-22T17:48:00.074579Z"
+     "iopub.execute_input": "2025-10-24T02:30:30.418842Z",
+     "iopub.status.busy": "2025-10-24T02:30:30.418522Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.425743Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.424825Z"
     },
     "papermill": {
-     "duration": 0.012426,
-     "end_time": "2025-10-22T17:48:00.077188",
+     "duration": 0.012416,
+     "end_time": "2025-10-24T02:30:30.427141",
      "exception": false,
-     "start_time": "2025-10-22T17:48:00.064762",
+     "start_time": "2025-10-24T02:30:30.414725",
      "status": "completed"
     },
     "tags": []
@@ -453,14 +453,182 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "c9be8cfb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-24T02:30:30.434905Z",
+     "iopub.status.busy": "2025-10-24T02:30:30.434530Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.442309Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.441286Z"
+    },
+    "papermill": {
+     "duration": 0.01363,
+     "end_time": "2025-10-24T02:30:30.443937",
+     "exception": false,
+     "start_time": "2025-10-24T02:30:30.430307",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Alice': (80.0, 85.5), 'David': (87.7, 95.0)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -------------------- FIND PASSING STUDENTS --------------------\n",
+    "def find_passing_students(students: list) -> dict:\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Write a function find_passing_students(students: list) -> dict where each student \n",
+    "    is represented as a dictionary: {\"name\": str, \"scores\": list[int], \"attendance\": float}.\n",
+    "    \n",
+    "    The function should:\n",
+    "    1. Compute the average score for each student\n",
+    "    2. Filter students with average >= 60 AND attendance >= 75.0\n",
+    "    3. Return a new dictionary mapping student name to a tuple (average_score, attendance)\n",
+    "       where average is rounded to one decimal place\n",
+    "    \n",
+    "    Example Input:\n",
+    "    students = [\n",
+    "        {\"name\": \"Alice\", \"scores\": [80, 70, 90], \"attendance\": 85.5},\n",
+    "        {\"name\": \"Bob\", \"scores\": [50, 60, 55], \"attendance\": 90.0},\n",
+    "        {\"name\": \"Charlie\", \"scores\": [70, 75, 80], \"attendance\": 70.0},\n",
+    "        {\"name\": \"David\", \"scores\": [90, 85, 88], \"attendance\": 95.0}\n",
+    "    ]\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    {\"Alice\": (80.0, 85.5), \"David\": (87.7, 95.0)}\n",
+    "    \"\"\"\n",
+    "    passing_students = {}\n",
+    "    average_score, attendance=0,0\n",
+    "    for i in range (len(students)):\n",
+    "        avg_marks = sum(students[i][\"scores\"])/len(students[i][\"scores\"])\n",
+    "        if  avg_marks >=60 and students[i][\"attendance\"]>=75.0:\n",
+    "            passing_students[students[i][\"name\"]] = (round(avg_marks,1),students[i][\"attendance\"])\n",
+    "        else:\n",
+    "            pass\n",
+    "    return passing_students\n",
+    "            \n",
+    "        \n",
+    "    \n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    students = [\n",
+    "        {\"name\": \"Alice\", \"scores\": [80, 70, 90], \"attendance\": 85.5},\n",
+    "        {\"name\": \"Bob\", \"scores\": [50, 60, 55], \"attendance\": 90.0},\n",
+    "        {\"name\": \"Charlie\", \"scores\": [70, 75, 80], \"attendance\": 70.0},\n",
+    "        {\"name\": \"David\", \"scores\": [90, 85, 88], \"attendance\": 95.0}]\n",
+    "    print(find_passing_students(students))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "3172b5f1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-24T02:30:30.451900Z",
+     "iopub.status.busy": "2025-10-24T02:30:30.451029Z",
+     "iopub.status.idle": "2025-10-24T02:30:30.459581Z",
+     "shell.execute_reply": "2025-10-24T02:30:30.458025Z"
+    },
+    "papermill": {
+     "duration": 0.014163,
+     "end_time": "2025-10-24T02:30:30.461153",
+     "exception": false,
+     "start_time": "2025-10-24T02:30:30.446990",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Problem statement. Let's get started !....\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -------------------- Q18: RESTAURANT ORDER SYSTEM --------------------\n",
+    "class problem_statement:\n",
+    "    \"\"\"\n",
+    "    Design a Restaurant Order system. Use these exact names and behaviors:\n",
+    "    \n",
+    "    Class MenuItem: attributes name: str, price: float, category: str\n",
+    "    Class Order: manage multiple MenuItem objects. Provide methods:\n",
+    "        add_item(item: MenuItem) -> None\n",
+    "        remove_item(item_name: str) -> None (remove by name; if not found, do nothing)\n",
+    "        get_total() -> float (sum of prices for all items)\n",
+    "        get_items_by_category(category: str) -> list (return list of item names)\n",
+    "        __str__() -> str - return a multi-line string:\n",
+    "    \n",
+    "    Order:\n",
+    "    - Burger (Main) - $8.50\n",
+    "    - Fries (Side) - $3.00\n",
+    "    - Coke (Drink) - $2.50\n",
+    "    Total: $14.00\n",
+    "    \n",
+    "    Input:\n",
+    "    order = Order()\n",
+    "    order.add_item(MenuItem(\"Burger\", 8.50, \"Main\"))\n",
+    "    order.add_item(MenuItem(\"Fries\", 3.00, \"Side\"))\n",
+    "    order.add_item(MenuItem(\"Coke\", 2.50, \"Drink\"))\n",
+    "    is_equal(order.get_total(), 14.00)\n",
+    "    is_equal(order.get_items_by_category(\"Side\"), [\"Fries\"])\n",
+    "    print(order)\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    14.0\n",
+    "    ['Fries']\n",
+    "    - Burger (Main) - $8.50\n",
+    "    - Fries (Side) - $3.00\n",
+    "    - Coke (Drink) - $2.50\n",
+    "    Total: $14.00\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.description = \"This is Problem statement. Let's get started !....\"\n",
+    "    def __str__(self):\n",
+    "        return self.description\n",
+    "        \n",
+    "# class MenuItem:\n",
+    "#     def __init__(self,name: str, price: float, category: str):\n",
+    "#         self.name = name\n",
+    "#         self.price = price\n",
+    "#         self.category = category\n",
+    "\n",
+    "# class Order:\n",
+    "#     # def __init__(self):\n",
+    "#     # # def add_item(item: MenuItem) -> None:\n",
+    "#     # # def remove_item(item_name: str) -> None:\n",
+    "#     # # def get_total() -> float:\n",
+    "#     # # def get_items_by_category(category: str) -> list:\n",
+    "#     # # def __str__() -> str:\n",
+    "    \n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(problem_statement())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0e6cdafe",
+   "id": "6f0abc59",
    "metadata": {
     "papermill": {
-     "duration": 0.002196,
-     "end_time": "2025-10-22T17:48:00.082030",
+     "duration": 0.002705,
+     "end_time": "2025-10-24T02:30:30.467034",
      "exception": false,
-     "start_time": "2025-10-22T17:48:00.079834",
+     "start_time": "2025-10-24T02:30:30.464329",
      "status": "completed"
     },
     "tags": []
@@ -498,14 +666,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.926213,
-   "end_time": "2025-10-22T17:48:00.604391",
+   "duration": 7.914602,
+   "end_time": "2025-10-24T02:30:30.990647",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-22T17:47:53.678178",
+   "start_time": "2025-10-24T02:30:23.076045",
    "version": "2.6.0"
   }
  },
